# this-already-exists-dont-rebuild-it

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment_space.json  retrieval_profiles.json
data/: README.md
data/seed/: execution_tasks.json  retrieval_tasks.jsonl  transactions.csv
docs/: architecture.md  decisions.md  experiment_matrix.md  kaggle_experiments.md  research_landscape.md  retrieval_model_experiment_system.md
notebooks/: 01_kaggle_build_capability_catalog.ipynb  02_kaggle_generate_search_features.ipynb  03_kaggle_small_model_routing_lab.ipynb  04_kaggle_conditional_retrieval_model_sweep.ipynb
reports/: initial-validation.json
schemas/: derived-feature.schema.json  execution-receipt.schema.json  operation.schema.json  package-release.schema.json  retrieval-task.schema.json  verified-capability.schema.json
src/existing_code_reuse/: __init__.py  benchmark.py  capabilities.py  cli.py  execution.py  experiments.py  ingest.py  model_qualification.py  models.py  retrieval.py  seed.py  storage.py
tests/: test_benchmark.py  test_execution.py  test_experiment_cli.py  test_experiments.py  test_ingest.py  test_model_qualification.py  test_notebooks.py  test_retrieval.py  test_storage.py
