[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "existing-code-reuse"
version = "0.1.0"
description = "Execution-grounded experiments for finding and reusing existing Python capabilities before generating new code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "packaging>=24",
]

[project.optional-dependencies]
retrieval = ["scikit-learn>=1.4"]
execution = ["pandas>=2.0"]
dev = [
  "pytest>=8",
  "ruff>=0.9",
]

[project.scripts]
reuse-code = "existing_code_reuse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/existing_code_reuse"]

[tool.hatch.build.targets.wheel.force-include]
"configs/retrieval_profiles.json" = "existing_code_reuse/retrieval_profiles.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
